k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upc-resolver
  labels:
    name: upc-resolver
    environment: production
